# building-ai-agent-from-scratch

./: .gitignore  .tool-versions  agent.py  content_types.py  execution_context.py  function_to_tool_utils.py  gaia.py  gaia_benchmark.py  llm_client.py  main.py  mcp_utils.py  pyproject.toml  sentiment_analysis.py  sentiment_analysis_main.py  tools.py
