[project]
name = "build-agent-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=3.6.0",
    "litellm>=1.83.4",
    "mcp[cli]>=1.27.0",
    "pydantic>=2.12.5",
    "tavily>=1.1.0",
    "tavily-python>=0.7.23",
    "tqdm>=4.67.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pyright>=1.1.408",
]

[tool.mypy]
python_version = "3.14.3"     # Set to your project's version
strict = true                 # Enables the most exhaustive type checking
ignore_missing_imports = true

[tool.pyright]
typeCheckingMode = "strict"
reportMissingTypeStubs = false
reportUnknownVariableType = false
venvPath = "."
venv = ".venv"
